Add RI49 and Nord rooms

--- a/templates/index.html
+++ b/templates/index.html
@@ -52,8 +52,8 @@
         <button onclick="sendCode(100,event)">BAV<buttonv>
         <button onclick="sendCode(101,event)">LOC<buttonv>
         <button onclick="sendCode(102,event)">EXP<buttonv>
-        <button onclick="sendCode(104,event)">REG<buttonv>
-        <button onclick="sendCode(200,event)">RAP<buttonv>
+        <button onclick="sendCode(59,event)">NORD<buttonv>
+        <button onclick="sendCode(49,event)">RI49<buttonv>
         <button onclick="sendCode(1000,event)">RST<buttonv>
     </main>
     <script>
