--- a/templates/index.html
+++ b/templates/index.html
@@ -45,16 +45,16 @@
 </head>
 <body>
     <main>
-        <button onclick="sendCode(696,event)">RRF</button>
-        <button onclick="sendCode(697,event)">FON</button>
-        <button onclick="sendCode(698,event)">TEC</button>
-        <button onclick="sendCode(699,event)">INT</button>
-        <button onclick="sendCode(6100,event)">BAV<buttonv>
-        <button onclick="sendCode(6101,event)">LOC<buttonv>
-        <button onclick="sendCode(6102,event)">EXP<buttonv>
-        <button onclick="sendCode(59,event)">NORD<buttonv>
-        <button onclick="sendCode(49,event)">RI49<buttonv>
-        <button onclick="sendCode(1000,event)">RST<buttonv>
+        <button onclick="sendCode('rrf',event)">RRF</button>
+        <button onclick="sendCode('fon',event)">FON</button>
+        <button onclick="sendCode('tec',event)">TEC</button>
+        <button onclick="sendCode('int',event)">INT</button>
+        <button onclick="sendCode('bav',event)">BAV<buttonv>
+        <button onclick="sendCode('loc',event)">LOC<buttonv>
+        <button onclick="sendCode('exp',event)">EXP<buttonv>
+        <button onclick="sendCode('reg',event)">REG<buttonv>
+        <button onclick="sendCode('nord',event)">NORD<buttonv>
+        <button onclick="sendCode('ri49',event)">RI49<buttonv>
     </main>
     <script>
         if (localStorage.getItem('key') === null) {
